...
                app:popupTheme="@style/ThemeOverlay.Broccoli.PopupOverlay"
                app:layout_scrollFlags="noScroll"
                app:title="@string/new_recipe"
                app:navigationIcon="@drawable/ic_close_24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:padding="0dp"
                    android:textColor="?attr/colorOnPrimarySurface"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="@drawable/image_background">

                <ImageView
                    android:id="@+id/new_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    android:onClick="@{() -> activity.onImageClick()}"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_title_24dp"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                        android:text="@={viewModel.recipe.title}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_info_24dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.description}" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_link_24dp"
                android:hint="@string/source">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.source}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person_24dp"
                android:hint="@string/servings">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_servings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:singleLine="true"
                    android:text="@={viewModel.recipe.servings}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_time_24dp"
                android:hint="@string/preparation_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_preparation_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.preparationTime}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_list_bulleted_24dp"
                android:hint="@string/ingredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.ingredients}" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_list_numbered_24dp"
                android:hint="@string/directions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.directions}" />

...
