...
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>

    <string name="recipe_photo_accessibility">Recipe photo</string>
    <string name="change_photo">Change photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Pick photo</string>
    <string name="image_could_not_be_created_message">The image file could not be created.</string>

    <string name="categories">Categories</string>
    <string name="create_a_category_prompt">Create custom categories to manage your recipes.</string>
...
