...
        android:title="@string/share_as_file_action"
        android:onClick="shareAsFile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details_edit"
        android:icon="@drawable/ic_menu_edit_24dp"
        android:title="@string/edit_action"
        android:onClick="edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details_duplicate"
        android:title="@string/duplicate_action"
        android:onClick="duplicate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details_delete"
        android:icon="@drawable/ic_menu_delete_24dp"
        android:title="@string/delete_action"
        android:onClick="delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details_create_pdf"
        android:title="@string/create_pdf"
        android:onClick="createPDF"
...
