...
            app:layout_constraintBottom_toBottomOf="parent"
            app:placeholder="@{@drawable/placeholder}"
            app:imageName="@{recipe.imageName}"
            android:contentDescription="@string/recipe_photo_accessibility" />

        <TextView
            android:id="@+id/card_text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
...
